Archive2/18/97d577db2a22d1/output
In file included from main.cpp:2:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/queue:64:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_queue.h:241:4: error: no member named 'pop_front' in 'std::vector<int, std::allocator<int> >'
        c.pop_front();
        ~ ^
main.cpp:9:5: note: in instantiation of member function 'std::queue<int, std::vector<int, std::allocator<int> > >::pop' requested here
  Q.pop(); // -----> BLAST!!!
    ^
1 error generated.
